--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,10 +8,8 @@ include hotdoc/lexer_parsers/c_comment_scanner/scanner.h
 include hotdoc/core/pandoc_interface/translator.hs
 include hotdoc/core/pandoc_interface/doc_translator.c
 include hotdoc/formatters/html/templates/*
-include hotdoc/formatters/html/style.css
-include hotdoc/formatters/html/redstyle.css
-include hotdoc/formatters/html/greenstyle.css
-include hotdoc/formatters/html/API_index.js
+include hotdoc/formatters/html/*.css
+include hotdoc/formatters/html/*.js
 include hotdoc/formatters/html/home.png
 include hotdoc/extensions/templates/*
 include requirements.txt
