--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,4 +5,7 @@ include hotdoc/lexer_parsers/c_comment_scanner/scanner.l
 include hotdoc/lexer_parsers/c_comment_scanner/scanner.h
 include hotdoc/formatters/html/templates/*
 include hotdoc/extensions/templates/*
-recursive-include hotdoc/default_theme *
+include hotdoc/default_theme/templates/*
+include hotdoc/default_theme/css/*
+include hotdoc/default_theme/js/*
+include hotdoc/default_theme/fonts/*
