--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,2 @@
 [TYPECHECK]
-ignored-modules=distutils,hotdoc.parsers.cmark,pygraphviz
+ignored-modules=distutils,hotdoc.parsers.cmark,pygraphviz,schema
