Bring syntax highlighting extension into the core.

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = cmark
 	url = https://github.com/MathieuDuponchelle/cmark.git
 	branch = extensions_draft_3
+[submodule "hotdoc/extensions/syntax_highlighting/prism"]
+	path = hotdoc/extensions/syntax_highlighting/prism
+	url = https://github.com/PrismJS/prism.git
+	branch = master
