--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 recursive-include cmark *
 recursive-include hotdoc/parsers *.h
+recursive-include hotdoc/parsers *.l
 recursive-include hotdoc/extensions/syntax_highlighting/prism *
 recursive-exclude hotdoc/hotdoc_bootstrap_theme *
 recursive-include hotdoc/hotdoc_bootstrap_theme/dist *
