MANIFEST.in: include COPYING

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,4 @@ recursive-include hotdoc/parsers *.l
 recursive-include hotdoc/extensions/syntax_highlighting/prism *
 recursive-exclude hotdoc/hotdoc_bootstrap_theme *
 recursive-include hotdoc/hotdoc_bootstrap_theme/dist *
+include COPYING
