--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -30,6 +30,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install wheel
-        python3 setup.py develop
+        pip install --editable .
     - name: Test
       run: python3 -m unittest
