--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,27 @@
 ## The following requirements were added by pip freeze:
 appdirs==1.4.4
 backports.entry-points-selectable==1.3.0
+cachetools==6.1.0
+chardet==5.2.0
+colorama==0.4.6
 dbus-deviation==0.6.1
+distlib==0.3.9
 faust-cchardet==2.1.19
--e git+ssh://git@github.com/hotdoc/hotdoc.git@adf8518431fafb78c9b47862a0a9a58824b6a421#egg=hotdoc
+filelock==3.18.0
+-e git+ssh://git@github.com/hotdoc/hotdoc.git@e3c2a0923b87f676b517e695a936a3ca9d79377e#egg=hotdoc
+iniconfig==2.1.0
 lxml==5.4.0
 networkx==3.5
+packaging==25.0
 pkgconfig==1.5.5
+platformdirs==4.3.8
+pluggy==1.6.0
+Pygments==2.19.1
+pyproject-api==1.9.1
+pytest==8.4.1
 PyYAML==6.0.2
 schema==0.7.7
 setuptools==80.9.0
 toposort==1.10
+virtualenv==20.31.2
 wheezy.template==3.2.3
