.gitmodules: track cmark master

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "cmark"]
 	path = cmark
 	url = https://github.com/MathieuDuponchelle/cmark.git
-	branch = extensions_draft_3
+	branch = master
 [submodule "hotdoc/extensions/syntax_highlighting/prism"]
 	path = hotdoc/extensions/syntax_highlighting/prism
 	url = https://github.com/PrismJS/prism.git
